--- a/locale/fr_FR/LC_MESSAGES/django.po
+++ b/locale/fr_FR/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-01-17 18:49+0000\n"
-"PO-Revision-Date: 2020-01-17 19:16+0100\n"
+"PO-Revision-Date: 2020-01-18 16:12+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
@@ -972,7 +972,7 @@ msgstr "Nouvelle entrée"
 
 #: templates/base.jade:106
 msgid "Sell"
-msgstr "Vendre"
+msgstr "Vente"
 
 #: templates/base.jade:109
 msgid "Cards to move from the stock place to the shelves"
