--- a/locale/fr_FR/LC_MESSAGES/django.po
+++ b/locale/fr_FR/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-01-17 18:49+0000\n"
-"PO-Revision-Date: 2020-01-18 16:12+0100\n"
+"PO-Revision-Date: 2020-01-22 16:22+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
@@ -1315,7 +1315,7 @@ msgstr "Dernières ventes"
 
 #: templates/search/card_history.jade:47
 msgid "This card has no no registered sells."
-msgstr "Cette notice n'est liée à aucune vente."
+msgstr "Aucune vente."
 
 #: templates/search/card_history.jade:53
 msgid "Last output movements"
