fix po file (don't update it manually!)

--- a/locale/fr_FR/LC_MESSAGES/django.po
+++ b/locale/fr_FR/LC_MESSAGES/django.po
@@ -182,7 +182,7 @@ msgstr "CHQ"
 
 #. Translators: abbreviation of the "credit card" payment method.
 #: search/models/common.py:52
-msgid "card"
+msgid "credit"
 msgstr "CB"
 
 #. Translators: abbreviation of the "transfert" payment method.
