--- a/locale/fr_FR/LC_MESSAGES/django.po
+++ b/locale/fr_FR/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-11-25 13:05+0000\n"
-"PO-Revision-Date: 2021-11-25 14:07+0100\n"
+"PO-Revision-Date: 2021-12-09 19:09+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
@@ -1713,7 +1713,7 @@ msgstr "Exporter la sélection en csv"
 
 #: templates/search/collection.jade:168
 msgid "Selection - csv"
-msgstr "Sélection - txt"
+msgstr "Sélection - csv"
 
 #: templates/search/collection.jade:170
 msgid "Export the stock to csv"
